# bench2vlog

./: .clang-format  .gitmodules  meson.build
libs/: meson.build
src/: aig2vlog.cpp
